apps/frontend-prod/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend-prod
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
